--- a/package.json
+++ b/package.json
@@ -9,10 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.13",
+    "aos": "^2.3.4",
+    "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.2.3",
+    "crypto": "^1.0.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "micro": "^10.0.1",
+    "moment": "^2.29.4",
+    "mongoose": "^7.0.1",
     "next": "13.2.4",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "stripe": "^11.14.0"
   }
 }
