--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "micro": "^10.0.1",
+    "micro-cors": "^0.1.1",
     "moment": "^2.29.4",
     "mongoose": "^7.0.1",
     "next": "13.2.4",
